--- a/pratik1.html
+++ b/pratik1.html
@@ -3,5 +3,9 @@
 <body>
 
     <h1> My NAME IS PRATIK</h1>
+    <h1> My NAME IS PRATIK</h1>
+    <h1> My NAME IS PRATIK</h1>
+    <h1> My NAME IS PRATIK</h1>
+    <h1> My NAME IS PRATIK</h1>
 </body>
 </html>
