--- a/project.html
+++ b/project.html
@@ -29,7 +29,7 @@ color:Black;
 		<img src="">
 				<form method="POST" action="#">
 					<div class="form_input">
-						<h3> <B> USERNAME </B> </h3> <p>
+						<h3> <B> USERNAME </B> </h3> <h1>nikhil</h1><p>
 						<input type="text" name="username" placeholder="enter your username"/>
 					</div>
 					<P>
